<resources>
    <string name="app_name">BEAT BUFFETT</string>
    <string name="instruction1">1- In the next 4 pages there are 4 Companies to invest in.</string>
    <string name="instruction2">2- You should choose in which Companies and how much money you d like to invest.</string>
    <string name="instruction3">3- Every investment is sold before the next selection (5 years passed).</string>
    <string name="instruction4">4- You should reach the Highest amount possible...</string>
    <string name="instruction5">Try to reach Warren!!!</string>
    <string name="cash">Cash:</string>
    <string name="a2000">2000</string>
    <string name="a2005">2005</string>
    <string name="a2010">2010</string>
    <string name="a2015">2015</string>
    <string name="perc0">0%</string>
    <string name="perc1">25%</string>
    <string name="perc2">50%</string>
    <string name="perc3">75%</string>
    <string name="perc4">100%</string>
    <string name="next">next</string>
    <string name="initial_cash">100000</string>
    <string name="win">You Beat Buffett</string>
    <string name="lose">Buffett Beat You</string>

    //Pagina 2000

    <string name="p_walmart">$68,38</string>
    <string name="ear_walmart">↑ EPS(5y): 102%</string>
    <string name="pe_walmart">P/E: 56,5</string>
    <string name="pb_walmart">P/B: 11,8</string>
    <string name="deq_walmart">Debt/Equity: 1,7</string>
    <string name="dea_walmart">Debt/Earnings: 8,3</string>

    <string name="p_cisco">$54,89</string>
    <string name="ear_cisco">↑ EPS(5y): 144%</string>
    <string name="pe_cisco">P/E: 140,7</string>
    <string name="pb_cisco">P/B: 14,3</string>
    <string name="deq_cisco">Debt/Equity: 0,3</string>
    <string name="dea_cisco">Debt/Earnings: 2,4</string>

    <string name="p_sysco">$19,50</string>
    <string name="ear_sysco">↑ EPS(5y): 345%</string>
    <string name="pe_sysco">P/E: 14,1</string>
    <string name="pb_sysco">P/B: 3,5</string>
    <string name="deq_sysco">Debt/Equity: 0,6</string>
    <string name="dea_sysco">Debt/Earnings: 2,3</string>

    <string name="p_exxon">$39,75</string>
    <string name="ear_exxon">↑ EPS(5y): 173%</string>
    <string name="pe_exxon">P/E: 7,7</string>
    <string name="pb_exxon">P/B: 1,9</string>
    <string name="deq_exxon">Debt/Equity: 0,9</string>
    <string name="dea_exxon">Debt/Earnings: 4,4</string>

    //Pagina 2005

    <string name="p_barrickgold">$22,00</string>
    <string name="ear_barrickgold">↑ EPS(5y): 20%</string>
    <string name="pe_barrickgold">P/E: 14,5</string>
    <string name="pb_barrickgold">P/B: 1,6</string>
    <string name="deq_barrickgold">Debt/Equity: 0,47</string>
    <string name="dea_barrickgold">Debt/Earnings: 4,3</string>

    <string name="p_kelloggs">$44,61</string>
    <string name="ear_kelloggs">↑ EPS(5y): 67%</string>
    <string name="pe_kelloggs">P/E: 13,0</string>
    <string name="pb_kelloggs">P/B: 6,2</string>
    <string name="deq_kelloggs">Debt/Equity: 1,7</string>
    <string name="dea_kelloggs">Debt/Earnings: 3,8</string>

    <string name="p_motorola">$63,00</string>
    <string name="ear_motorola">↑ EPS(5y): 247%</string>
    <string name="pe_motorola">P/E: 6,5</string>
    <string name="pb_motorola">P/B: 1,3</string>
    <string name="deq_motorola">Debt/Equity: 0,33</string>
    <string name="dea_motorola">Debt/Earnings: 4,2</string>

    <string name="p_starbucks">$13,80</string>
    <string name="ear_starbucks">↑ EPS(5y): 423%</string>
    <string name="pe_starbucks">P/E: 39,6</string>
    <string name="pb_starbucks">P/B: 9,2</string>
    <string name="deq_starbucks">Debt/Equity: 0,0</string>
    <string name="dea_starbucks">Debt/Earnings: 0,0</string>

    //Pagina 2010

    <string name="p_apple">$7,62</string>
    <string name="ear_apple">↑ EPS(5y): 800%</string>
    <string name="pe_apple">P/E: 17,73</string>
    <string name="pb_apple">P/B: 4,61</string>
    <string name="deq_apple">Debt/Equity: 0</string>
    <string name="dea_apple">Debt/Earnings: 0</string>

    <string name="p_amazon">$136,25</string>
    <string name="ear_amazon">↑ EPS(5y): 201%</string>
    <string name="pe_amazon">P/E: 65,94</string>
    <string name="pb_amazon">P/B: 11,36</string>
    <string name="deq_amazon">Debt/Equity: 0</string>
    <string name="dea_amazon">Debt/Earnings: 0</string>

    <string name="p_monster">$6,44</string>
    <string name="ear_monster">↑ EPS(5y): 245%</string>
    <string name="pe_monster">P/E: 17,46</string>
    <string name="pb_monster">P/B: 5,79</string>
    <string name="deq_monster">Debt/Equity: 0</string>
    <string name="dea_monster">Debt/Earnings: 0</string>

    <string name="p_tractorsupply">$13,30</string>
    <string name="ear_tractorsupply">↑ EPS(5y): 117%</string>
    <string name="pe_tractorsupply">P/E: 14,43</string>
    <string name="pb_tractorsupply">P/B: 2,18</string>
    <string name="deq_tractorsupply">Debt/Equity: 0</string>
    <string name="dea_tractorsupply">Debt/Earnings: 0</string>

    //Pagina 2015

    <string name="p_netflix">$62,84</string>
    <string name="ear_netflix">↑ EPS(5y): 340%</string>
    <string name="pe_netflix">P/E: 78,71</string>
    <string name="pb_netflix">P/B: 11,11</string>
    <string name="deq_netflix">Debt/Equity: 1,26</string>
    <string name="dea_netflix">Debt/Earnings: 19,7</string>

    <string name="p_mastercard">$28,68</string>
    <string name="ear_mastercard">↑ EPS(5y): 138%</string>
    <string name="pe_mastercard">P/E: 26,78</string>
    <string name="pb_mastercard">P/B: 14,02</string>
    <string name="deq_mastercard">Debt/Equity: 0,22</string>
    <string name="dea_mastercard">Debt/Earnings: 0,4</string>

    <string name="p_ford">$15,59</string>
    <string name="ear_ford">↑ EPS(5y): 33%</string>
    <string name="pe_ford">P/E: 3,97</string>
    <string name="pb_ford">P/B: 1,83</string>
    <string name="deq_ford">Debt/Equity: 4,87</string>
    <string name="dea_ford">Debt/Earnings: 16,1</string>

    <string name="p_fedex">$173,78</string>
    <string name="ear_fedex">↑ EPS(5y): 156%</string>
    <string name="pe_fedex">P/E: 18,67</string>
    <string name="pb_fedex">P/B: 3,04</string>
    <string name="deq_fedex">Debt/Equity: 0,30</string>
    <string name="dea_fedex">Debt/Earnings: 3,9</string>


</resources>